# Photoshnaya

./: .dockerignore  .env.example  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.bridge  Dockerfile.dev  Dockerfile.prod  Makefile  README.md  TODO.txt  Taskfile.yml  bot.py  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  docker_script.sh  dump_test_data.sql  env.example  go.mod  init_db.py  pyproject.toml  requirements.txt  test.py  test_restore.sh
.github/workflows/: python-app.yml
app/: bot.py  reminders.py
app/db/: db_classes.py  db_operations.py
app/handlers/: admin_add_fsm.py  admin_del_fsm.py  admin_handler.py  contest_create.py  contest_fsm.py  delete_submission.py  on_join.py  personal_vote_menu.py  user_action.py  vote.py  vote_start_fsm.py
app/services/: vote_backend.py
app/tests/: TODO.txt  conftest.py  mocked_bot.py  test_business_logic.py  test_db.py  test_e2e_admin_menu.py  test_e2e_admin_mgmt.py  test_e2e_contest_fsm.py  test_e2e_finish_vote.py  test_e2e_go_api_parity.py  test_e2e_leaderboards.py  test_e2e_lifecycle.py  test_e2e_on_join.py  test_e2e_register.py  (+6 more)
database_learn/: db.py
db/: db_classes.py  db_operations.py  init_db.py  sqlite3.db
deploy-helper/: README.md  go.mod  main.go
go-api/: Dockerfile  README.md  go.mod
handlers/: admin_add_fsm.py  admin_del_fsm.py  admin_handler.py  contest_fsm.py  delete_submission.py  on_join.py  personal_vote_menu.py  user_action.py  vote.py  vote_start_fsm.py
migrate/: main.py
other_learn/: check.py  dump.rdb  redisfun.py
reminders/: main.py
scripts/: deploy_remote.sh
tests/: test.py  test_business_logic.py  test_db.py  test_handler.py  tests_business_logic.py  tests_db.py  tests_handler.py
utils/: TelegramUserClass.py  admin_keyboard.py  keyboard.py
(+44 files in other folders)
