[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "photoshnaya"
version = "0.1.0"
description = "Telegram bot for photo contests in group chats"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "aiofiles==23.1.0",
  "aiogram==3.0.0b7",
  "aiogram-dialog==2.0.0b16",
  "aiohttp==3.8.4",
  "aiosignal==1.3.1",
  "amqp==5.1.1",
  "async-timeout==4.0.2",
  "attrs==22.2.0",
  "Babel==2.12.1",
  "billiard==4.1.0",
  "cachetools==4.2.4",
  "celery==5.3.1",
  "certifi==2023.7.22",
  "charset-normalizer==3.0.1",
  "click==8.1.3",
  "click-didyoumean==0.3.0",
  "click-plugins==1.1.1",
  "click-repl==0.3.0",
  "frozenlist==1.3.3",
  "greenlet==2.0.2",
  "hiredis==2.2.3",
  "idna==3.4",
  "Jinja2==3.1.2",
  "kombu==5.3.1",
  "magic-filter==1.0.9",
  "MarkupSafe==2.1.2",
  "multidict==6.0.4",
  "naming==0.7.0",
  "packaging==23.1",
  "platformdirs==3.6.0",
  "prompt-toolkit==3.0.39",
  "psycopg==3.1.8",
  "psycopg-binary==3.1.8",
  "pydantic==1.10.5",
  "python-dateutil==2.8.2",
  "python-dotenv==1.0.0",
  "PyYAML==6.0",
  "redis==4.6.0",
  "setuptools==80.9.0",
  "six==1.16.0",
  "SQLAlchemy==2.0.4",
  "typing-extensions==4.5.0",
  "tzdata==2023.3",
  "vine==5.0.0",
  "wcwidth==0.2.6",
  "yarl==1.8.2",
]

[project.optional-dependencies]
dev = [
  "cfgv==3.3.1",
  "distlib==0.3.6",
  "filelock==3.12.2",
  "flake8==6.0.0",
  "identify==2.5.24",
  "iniconfig==2.0.0",
  "isort==5.12.0",
  "mccabe==0.7.0",
  "nodeenv==1.8.0",
  "pluggy==1.0.0",
  "pre-commit==3.3.3",
  "pycodestyle==2.10.0",
  "pyflakes==3.0.1",
  "pytest==7.3.1",
  "pytest-asyncio==0.21.0",
  "ruff==0.0.262",
  "virtualenv==20.23.1",
]

[tool.uv]
package = false
